NFS storage class changes

--- a/kubernetes/external/minecraft/minecraft-helm-base.yaml
+++ b/kubernetes/external/minecraft/minecraft-helm-base.yaml
@@ -71,7 +71,8 @@ extraEnv:
 # NOTE this ties the deployment to the first node it spins up on,
 # TODO: use an NFS mount to avoid this
 persistence:
+  storageClass: nfs-storageclass
   annotations: {}
   dataDir:
     enabled: true
-    Size: 1Gi
+    Size: 20Gi
