Corrected error where ressource memory naming should be '8g' and not '8Gi'

--- a/kubernetes/external/minecraft/minecraft-helm-base.yaml
+++ b/kubernetes/external/minecraft/minecraft-helm-base.yaml
@@ -14,10 +14,10 @@
 # at startup time
 resources:
   requests:
-    memory: 8Gi
+    memory: 8g
     cpu: 1
   limits:
-    memory: 24Gi
+    memory: 24g
     cpu: 3
 
 # Common minecraft server settings
