--- a/kubernetes/external/minecraft/servers/playzir.yaml
+++ b/kubernetes/external/minecraft/servers/playzir.yaml
@@ -1,9 +1,9 @@
 resources:
   requests:
-    memory: 8Gi
+    memory: 8g
     cpu: 1
   limits:
-    memory: 24Gi
+    memory: 24g
     cpu: 3
 
 minecraftServer:
