--- a/kubernetes/internal/prom-k8s/kustomization.yaml
+++ b/kubernetes/internal/prom-k8s/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 configMapGenerator:
   - name: prom-config
     files:
-      - configs/prometheus.yaml
+      - configs/prometheus.yml
   - name: grafana-datasources
     files:
       - configs/ds-prom.yaml
