Changed storageClassname in prometheus-values.yaml

--- a/kubernetes/external/kube-prometheus-stack/prometheus-values.yaml
+++ b/kubernetes/external/kube-prometheus-stack/prometheus-values.yaml
@@ -3,7 +3,7 @@ grafana:
   defaultDashboardsEnabled: true
   persistence:
     enabled: true
-    storageClassName: prometheus-grafana
+    storageClassName: storage-kps
     existingClaim: pvc-kube-prometheus-stack
 
 prometheusOperator:
