--- a/kubernetes/external/minecraft/servers/playzir.yaml
+++ b/kubernetes/external/minecraft/servers/playzir.yaml
@@ -20,10 +20,10 @@ minecraftServer:
   motd: "Welcome to Minecraft on Kubernetes"
   pvp: true
   serviceType: NodePort
-  downloadWorldUrl:
   nodePort: 30100
   viewDistance: 15
   memory: 8g
+  modUrls: ["https://github.com/ruscalworld/fabric-exporter/releases/download/v1.0.14/fabricexporter-1.0.14.jar"]
 
   rcon:
     enabled: true
