--- a/kubernetes/external/minecraft/servers/playzir.yaml
+++ b/kubernetes/external/minecraft/servers/playzir.yaml
@@ -23,7 +23,7 @@ minecraftServer:
   nodePort: 30100
   viewDistance: 15
   memory: 8g
-  modUrls: ["https://github.com/ruscalworld/fabric-exporter/releases/download/v1.0.13/fabricexporter-1.0.13.jar"]
+  pluginUrls: ["https://github.com/ruscalworld/fabric-exporter/releases/download/v1.0.14/fabricexporter-1.0.14.jar"]
 
   rcon:
     enabled: true
