--- a/kubernetes/external/minecraft/servers/playzir.yaml
+++ b/kubernetes/external/minecraft/servers/playzir.yaml
@@ -23,7 +23,7 @@ minecraftServer:
   nodePort: 30100
   viewDistance: 15
   memory: 8g
-  pluginUrls: ["https://github.com/ruscalworld/fabric-exporter/releases/download/v1.0.14/fabricexporter-1.0.14.jar"]
+  pluginUrls: ["https://objects.githubusercontent.com/github-production-release-asset-2e65be/81373965/0b2f95bd-ba5b-41e6-a1ce-11fa85478ac0?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250427%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250427T200616Z&X-Amz-Expires=300&X-Amz-Signature=5fc2d12d77290e4b0d905bb8528fe8d2b8da8797dd4cd51df48f0885bf6917bc&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dminecraft-prometheus-exporter-3.1.2.jar&response-content-type=application%2Foctet-stream"]
 
   rcon:
     enabled: true
