--- a/kubernetes/external/kube-prometheus-stack/prometheus-values.yaml
+++ b/kubernetes/external/kube-prometheus-stack/prometheus-values.yaml
@@ -29,3 +29,9 @@ prometheus:
     serviceMonitorSelectorNilUsesHelmValues: false
     serviceMonitorSelector: {}
     serviceMonitorNamespaceSelector: {}
+    additionalScrapeConfigs:
+      - job_name: 'minecraft'
+        static_configs:
+          - targets: [ 'localhost:9940' ]
+            labels:
+              server_name: 'playzir'
