--- a/kubernetes/external/minecraft/servers/playzir.yaml
+++ b/kubernetes/external/minecraft/servers/playzir.yaml
@@ -39,3 +39,7 @@ persistence:
   dataDir:
     enabled: true
     existingClaim: pvc-playzir
+
+podSecurityContext:
+  runAsGroup: 3000
+  fsGroup: 3000
