7 minecraft server volume is linked to a randomly generated directery by k3s (#8)
Added explicitly declared PV & PVC for minecraft servers and some comments to explain owning issues people might face on a single master-node deployment.

--- a/kubernetes/external/minecraft/servers/playzir.yaml
+++ b/kubernetes/external/minecraft/servers/playzir.yaml
@@ -38,4 +38,8 @@ extraEnv:
 persistence:
   dataDir:
     enabled: true
-    Size: 20Gi
+    existingClaim: pvc-playzir
+
+podSecurityContext:
+  runAsGroup: 3000
+  fsGroup: 3000
