--- a/kubernetes/external/kube-prometheus-stack/service.yaml
+++ b/kubernetes/external/kube-prometheus-stack/service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: grafana-nodeport
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 3000
-      nodePort: 32323
   selector:
     app.kubernetes.io/name: grafana
