--- a/kubernetes/external/kube-prometheus-stack/service.yaml
+++ b/kubernetes/external/kube-prometheus-stack/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana-nodeport
+  name: grafana-dashboard
 spec:
   type: LoadBalancer
   ports:
     - port: 80
-      targetPort: 3000
+      targetPort: 80
   selector:
     app.kubernetes.io/name: grafana
