--- a/kubernetes/external/kube-prometheus-stack/service.yaml
+++ b/kubernetes/external/kube-prometheus-stack/service.yaml
@@ -1,11 +1,17 @@
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: grafana-dashboard
+  name: grafana-ingress
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
-  type: LoadBalancer
-  ports:
-    - port: 80
-      targetPort: 80
-  selector:
-    app.kubernetes.io/name: grafana
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: kube-prometheus-stack-grafana
+                port:
+                  number: 80
