--- a/kubernetes/internal/traefik/deployment.yaml
+++ b/kubernetes/internal/traefik/deployment.yaml
@@ -2,6 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: traefik-deployment
+  namespace: traefik  # Add the namespace
   labels:
     app: traefik
 spec:
@@ -20,7 +21,8 @@ spec:
           image: traefik:v3.3
           args:
             - --api.insecure
-            - --providers.kubernetesingress
+            - --providers.kubernetesIngress
+            - --entrypoints.web.address=:80
           ports:
             - name: web
               containerPort: 80
