--- a/kubernetes/internal/traefik/service.yaml
+++ b/kubernetes/internal/traefik/service.yaml
@@ -27,7 +27,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: traefik-playzir
+  name: traefik-plzmc
 spec:
   type: LoadBalancer
   ports:
