--- a/kubernetes/internal/traefik/deployment.yaml
+++ b/kubernetes/internal/traefik/deployment.yaml
@@ -22,6 +22,7 @@ spec:
           args:
             - --api.insecure
             - --providers.kubernetesIngress
+            - --providers.kubernetesCRD
             - --entrypoints.web.address=:80
           ports:
             - name: web
