--- a/kubernetes/external/minecraft/playzir/ingress.yaml
+++ b/kubernetes/external/minecraft/playzir/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
-  name: minecraft-tcp
+  name: playzir-minecraft-tcp
 spec:
   entryPoints:
     - playzir-mc
