Changed port in service traefik

--- a/kubernetes/internal/traefik/service.yaml
+++ b/kubernetes/internal/traefik/service.yaml
@@ -31,7 +31,7 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - targetPort: playzir-minecraft
+    - targetPort: playzir-mc
       port: 25565
   selector:
     app: traefik
