Adding entrypoint in args

--- a/kubernetes/internal/traefik/deployment.yaml
+++ b/kubernetes/internal/traefik/deployment.yaml
@@ -24,6 +24,7 @@ spec:
             - --providers.kubernetesIngress
             - --providers.kubernetesCRD
             - --entrypoints.web.address=:80
+            - --entrypoints.playzir-mc.address=:25565
           ports:
             - name: web
               containerPort: 80
