--- a/kubernetes/external/kube-prometheus-stack/volume.yaml
+++ b/kubernetes/external/kube-prometheus-stack/volume.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-kube-prometheus-stack
+  namespace: monitoring
   labels:
     type: local
 spec:
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-kube-prometheus-stack
+  namespace: monitoring
 spec:
   storageClassName: storage-kps
   accessModes:
