--- a/kubernetes/external/minecraft/base-example/volume-minecraft-base.yaml
+++ b/kubernetes/external/minecraft/base-example/volume-minecraft-base.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-minecraft-base
+  namespace: minecraft
   labels:
     type: local
 spec:
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-minecraft-base
+  namespace: minecraft
 spec:
   storageClassName: storage-minecraft-base
   accessModes:
