--- a/kubernetes/external/minecraft/playzir/ingress-route-tcp.yaml
+++ b/kubernetes/external/minecraft/playzir/ingress-route-tcp.yaml
@@ -2,6 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
   name: playzir-minecraft-tcp
+  namespace: minecraft
 spec:
   entryPoints:
     - playzir-mc
