--- a/kubernetes/internal/traefik/service.yaml
+++ b/kubernetes/internal/traefik/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-dashboard-service
+  namespace: traefik
 spec:
   type: LoadBalancer
   ports:
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-web-service
+  namespace: traefik
 spec:
   type: LoadBalancer
   ports:
@@ -28,6 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-playzir-minecraft
+  namespace: traefik
 spec:
   type: LoadBalancer
   ports:
