--- a/kubernetes/internal/vintage-story/deployment.yaml
+++ b/kubernetes/internal/vintage-story/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vintagestory-deployment
+  namespace: vintagestory
   labels:
     app.kubernetes.io/name: vintagestory-deployment
     app: vintagestory
