--- a/kubernetes/internal/vintage-story/service.yaml
+++ b/kubernetes/internal/vintage-story/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vintagestory-service
+  namespace: vintagestory
   labels:
     app.kubernetes.io/name: vintagestory-deployment
     app: vintagestory
