--- a/kubernetes/internal/vintage-story/volume.yaml
+++ b/kubernetes/internal/vintage-story/volume.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-vintagestory
+  namespace: vintagestory
   labels:
     type: local
 spec:
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-vintagestory
+  namespace: vintagestory
 spec:
   storageClassName: storage-vintagestory
   accessModes:
