--- a/kubernetes/internal/vintage-story/service.yaml
+++ b/kubernetes/internal/vintage-story/service.yaml
@@ -7,10 +7,10 @@ metadata:
     app.kubernetes.io/name: vintagestory-deployment
     app: vintagestory
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-    - port: 42420
-      targetPort: 42420
-      nodePort: 31111
+    - name: vintagestory
+      port: 42420
+      targetPort: vintagestory
   selector:
     app.kubernetes.io/name: vintagestory-deployment
