--- a/kubernetes/internal/vintage-story/service.yaml
+++ b/kubernetes/internal/vintage-story/service.yaml
@@ -12,4 +12,4 @@ spec:
       port: 42420
       targetPort: vintagestory
   selector:
-    app.kubernetes.io/name: vintagestory
+    app: vintagestory
