--- a/kubernetes/external/kube-prometheus-stack/ingress.yaml
+++ b/kubernetes/external/kube-prometheus-stack/ingress.yaml
@@ -7,7 +7,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-    - http:
+    - host: grafana.sentrance.fr
+      http:
         paths:
           - path: /
             pathType: Prefix
