10 use traefik implement reverse proxy (#11)
Added traefik ingress and load balancing on every pod. Forced namespace. Added dns usage.

--- a/kubernetes/internal/vintage-story/deployment.yaml
+++ b/kubernetes/internal/vintage-story/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vintagestory-deployment
+  namespace: vintagestory
   labels:
     app.kubernetes.io/name: vintagestory-deployment
     app: vintagestory
@@ -21,7 +22,8 @@ spec:
             - mountPath: "/vintagestory"
               name: pv-deployment-vintagestory
           ports:
-            - containerPort: 42420
+            - name: vintagestory
+              containerPort: 42420
           resources:
             requests:
               memory: 3Gi
