--- a/kubernetes/external/minecraft/playzir/volume-playzir.yaml
+++ b/kubernetes/external/minecraft/playzir/volume-playzir.yaml
@@ -1,25 +1,27 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-minecraft-base
+  name: pv-playzir
+  namespace: minecraft
   labels:
     type: local
 spec:
-  storageClassName: storage-minecraft-base
+  storageClassName: storage-playzir
   capacity:
     storage: 30Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/pv-minecraft-base"
+    path: "/mnt/pv-playzir"
 
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-minecraft-base
+  name: pvc-playzir
+  namespace: minecraft
 spec:
-  storageClassName: storage-minecraft-base
+  storageClassName: storage-playzir
   accessModes:
     - ReadWriteOnce
   resources:
