Corrected mountPath for volume deployment.yaml for terraria server

--- a/kubernetes/internal/terraria/deployment.yaml
+++ b/kubernetes/internal/terraria/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - name: terraria-server
           image: passivelemon/terraria-docker:terraria-latest
           volumeMounts:
-            - mountPath: "/terraria"
+            - mountPath: "/opt/terraria/"
               name: pv-deployment-terraria
           ports:
             - name: terraria
