--- a/kubernetes/internal/terraria/deployment.yaml
+++ b/kubernetes/internal/terraria/deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: terraria
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 3000
       containers:
         - name: terraria-server
           image: passivelemon/terraria-docker:terraria-latest
